--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bootstrap-vue": "^2.13.0",
     "core-js": "^3.6.4",
     "vue": "^2.6.11",
+    "vue-awesome-swiper": "^4.1.1",
     "vue-router": "^3.1.6",
     "vue-the-mask": "^0.11.1",
     "vuex": "^3.1.3"
