--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "vue": "^2.6.11",
     "vue-awesome-swiper": "^4.1.1",
     "vue-router": "^3.1.6",
+    "vue-scrollto": "^2.18.1",
     "vue-the-mask": "^0.11.1",
     "vuex": "^3.1.3"
   },
